--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 
 <body>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li>
+            <a href="./recipes/tacos.html">Tacos</a>
+        </li>
+        <li>
+            <a href="./recipes/minestrone_soup.html">Minestrone Soup</a>
+        </li>
+        <li>
+            <a href="./recipes/zucchini_boats.html">Buffalo Chicken Zucchini Boats</a>
+        </li>
+    </ul>
+
 
 </body>
 
