--- a/recipes/minestrone_soup.html
+++ b/recipes/minestrone_soup.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Minestrone Soup</title>
 </head>
 
 <body>
     <h1>Minestrone Soup</h1>
-    <img src="../images/minestrone_finished.jpg" alt="minestrone soup">
+    <img src="../images/minestrone_finished.jpg" alt="minestrone soup" class="img_main">
 
     <h2>Description</h2>
     <p> Crock Pot Minestrone is the perfect healthy soup. It’s loaded
@@ -18,7 +19,7 @@
     </p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients_list">
         <li>2 cups russet potato peeled and chopped into 1 inch
             cubes</li>
         <li>1 cup sliced carrots</li>
@@ -45,34 +46,37 @@
     </ul>
 
     <h2>Steps</h2>
-    <ol>
-        <li>Add peeled and cubed potatoes to a large slow cooker.</li>
-        <li>Add chopped onion and frozen cut green beans.
-            You could use fresh green beans, but there are a lot of
-            vegetables to chop for this recipe so I like this short
-            cut.</li>
-        <img src="../images/minestrone_1.webp" alt="minestrone_1">
-        <li>Add sliced celery, carrots, and zucchini.</li>
-        <li>Add frozen corn kernels.</li>
-        <img src="../images/minestrone_2.webp" alt="minestrone_2">
-        <li>Add tomato sauce, broth, and petite diced tomatoes.</li>
-        <li>Add Italian seasoning, sugar, salt, pepper, garlic powder,
-            and bay leaves.</li>
-        <img src="../images/minestrone_3.jpg" alt="minestrone_3">
-        <li>Add drained and rinsed red kidney beans and white
-            beans.</li>
-        <li>Cover and cook on low for 8 hours, or high for 4
-            hours.</li>
-        <img src="../images/minestrone_4.webp" alt="minestrone_4">
-        <li>Add chopped baby spinach leaves.</li>
-        <li>Cook another 15 minutes.</li>
-        <li>Serve topped with grated parmesan cheese.</li>
-        <img src="../images/minestrone_5.jpg" alt="minestrone_5">
-        <img src="../images/minestrone_6.jpg" alt="minestrone_6">
+    <div class="centered_list">
+        <ol>
+            <li>Add peeled and cubed potatoes to a large slow cooker.</li>
+            <li>Add chopped onion and frozen cut green beans.
+                You could use fresh green beans, but there are a lot of
+                vegetables to chop for this recipe so I like this short
+                cut.</li>
+            <img src="../images/minestrone_1.webp" alt="minestrone_1" class="img_steps">
+            <li>Add sliced celery, carrots, and zucchini.</li>
+            <li>Add frozen corn kernels.</li>
+            <img src="../images/minestrone_2.webp" alt="minestrone_2" class="img_steps">
+            <li>Add tomato sauce, broth, and petite diced tomatoes.</li>
+            <li>Add Italian seasoning, sugar, salt, pepper, garlic powder,
+                and bay leaves.</li>
+            <img src="../images/minestrone_3.jpg" alt="minestrone_3" class="img_steps">
+            <li>Add drained and rinsed red kidney beans and white
+                beans.</li>
+            <li>Cover and cook on low for 8 hours, or high for 4
+                hours.</li>
+            <img src="../images/minestrone_4.webp" alt="minestrone_4" class="img_steps">
+            <li>Add chopped baby spinach leaves.</li>
+            <li>Cook another 15 minutes.</li>
+            <li>Serve topped with grated parmesan cheese.</li>
+            <img src="../images/minestrone_5.jpg" alt="minestrone_5" class="img_steps">
+            <img src="../images/minestrone_6.jpg" alt="minestrone_6" class="img_steps">
+        </ol>
 
-
-
-    </ol>
+    </div>
+    <div style="text-align:center;">
+        <a href="../index.html" id="previous_btn">Return</a>
+    </div>
 </body>
 
 </html>
