--- a/recipes/zucchini_boats.html
+++ b/recipes/zucchini_boats.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Zucchini Boats</title>
 </head>
 
 <body>
     <h1>Buffalo Chicken Zucchini Boats</h1>
-    <img src="../images/zucchini_finished.jpg" alt="zucchini_finished">
+    <img src="../images/zucchini_finished.jpg" alt="zucchini_finished" class="img_main">
 
     <h2>Description</h2>
     <p>Buffalo Chicken Zucchini Boats – a simple stuffed zucchini
@@ -25,7 +26,7 @@
     </p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients_list">
         <li>4 small-medium zucchini about 1¾ pounds</li>
         <li>1 lb. ground chicken</li>
         <li>1/2 cup Buffalo Wing Sauce not regular hot sauce</li>
@@ -33,23 +34,30 @@
     </ul>
 
     <h2>Steps</h2>
-    <ol>
-        <li>Preheat oven to 400 degrees F. Spray a 9x13 inch baking
-            dish with cooking spray.</li>
-        <li>Place a large non-stick skillet over medium-high heat.
-            Add the chicken and break it apart with a wooden spoon.
-            Cook for 7-9 minutes, until the chicken is cooked through,
-            stirring occasionally.</li>
-        <li>Remove the skillet from the heat. Stir in the buffalo
-            wing sauce.</li>
-        <li>As the chicken cooks, cut the zucchini in half, lengthwise.
-            Use a spoon to scoop the seeds and center out of each zucchini
-            half, leaving a ¼ inch thick zucchini boat. Place the zucchini
-            in the baking dish cut-side up.</li>
-        <li>Spoon the chicken mixture into the zucchini boats. Sprinkle the
-            zucchini evenly with the cheese.</li>
-        <li>Cover the baking dish with foil. Bake for 35 minutes.</li>
-    </ol>
+    <div class="centered_list">
+        <ol>
+            <li>Preheat oven to 400 degrees F. Spray a 9x13 inch baking
+                dish with cooking spray.</li>
+            <li>Place a large non-stick skillet over medium-high heat.
+                Add the chicken and break it apart with a wooden spoon.
+                Cook for 7-9 minutes, until the chicken is cooked through,
+                stirring occasionally.</li>
+            <li>Remove the skillet from the heat. Stir in the buffalo
+                wing sauce.</li>
+            <li>As the chicken cooks, cut the zucchini in half, lengthwise.
+                Use a spoon to scoop the seeds and center out of each zucchini
+                half, leaving a ¼ inch thick zucchini boat. Place the zucchini
+                in the baking dish cut-side up.</li>
+            <li>Spoon the chicken mixture into the zucchini boats. Sprinkle the
+                zucchini evenly with the cheese.</li>
+            <li>Cover the baking dish with foil. Bake for 35 minutes.</li>
+        </ol>
+
+    </div>
+    <div style="text-align:center;">
+        <a href="../index.html" id="previous_btn">Return</a>
+    </div>
+
 </body>
 
 </html>
