--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Tacos</title>
 </head>
 
 <body>
+
     <h1>Tacos</h1>
-    <img src="../images/tacos_finished.jpg" alt="tacos_finished">
+    <img src="../images/tacos_finished.jpg" alt="tacos_finished" class="img_main">
 
     <h2>Description</h2>
     <p> Ground beef tacos in a crispy corn shell or a soft flour
@@ -19,7 +21,7 @@
     </p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients_list">
         <li>1 lb. 90% to 93% lean ground beef</li>
         <li>1 Tablespoon chili powder</li>
         <li>1 teaspoon ground cumin</li>
@@ -37,23 +39,30 @@
     </ul>
 
     <h2>Steps</h2>
-    <ol>
-        <li>Break apart lean ground beef in a skillet over medium-high
-            heat.</li>
-        <li>Add chili powder, cumin, salt, oregano, garlic powder,
-            and pepper.</li>
-        <li>Cook until the beef is browned.</li>
-        <img src="../images/tacos_1.jpg" alt="tacos_1">
-        <li>Add tomato sauce and water to the meat.</li>
-        <img src="../images/tacos_2.jpg" alt="tacos_2">
-        <li>Cook until some liquid has evaporated, but the meat is
-            still saucy.</li>
-        <img src="../images/tacos_3.jpg" alt="tacos_3">
-        <li>Spoon 2 tablespoons of the taco meat into hard taco shells
-            or small soft tortillas.</li>
-        <li>Top the tacos with your favorite traditional taco toppings.</li>
-        <img src="../images/tacos_4.jpg" alt="tacos_4">
-    </ol>
+    <div class="centered_list">
+        <ol>
+            <li>Break apart lean ground beef in a skillet over medium-high
+                heat.</li>
+            <li>Add chili powder, cumin, salt, oregano, garlic powder,
+                and pepper.</li>
+            <li>Cook until the beef is browned.</li>
+            <img src="../images/tacos_1.jpg" alt="tacos_1" class="img_steps">
+            <li>Add tomato sauce and water to the meat.</li>
+            <img src="../images/tacos_2.jpg" alt="tacos_2" class="img_steps">
+            <li>Cook until some liquid has evaporated, but the meat is
+                still saucy.</li>
+            <img src="../images/tacos_3.jpg" alt="tacos_3" class="img_steps">
+            <li>Spoon 2 tablespoons of the taco meat into hard taco shells
+                or small soft tortillas.</li>
+            <li>Top the tacos with your favorite traditional taco toppings.</li>
+            <img src="../images/tacos_4.jpg" alt="tacos_4" class="img_steps">
+        </ol>
+    </div>
+    <div style="text-align:center;">
+        <a href="../index.html" id="previous_btn">Return</a>
+    </div>
+
+
 </body>
 
 </html>
